# pose-viewer-pilot

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
app/: main.py
app/static/: h5py-tests.tar  main.py  packages.json  pynwb-2.1.0-py2.py3-none-any.whl  pyodide.asm.js  pyodide_py.tar  pyscript.js  pyscript.min.js  pyscript.min.js.map  script.js  setuptools-62.0.0-py3-none-any.whl  sleap_io-0.0.1-py3-none-any.whl  sleap_io-0.0.1-py3.pims-none-any.whl  sleap_io-0.0.1-py3.pypi-none-any.whl  style.css
app/static/pyodide/: Jinja2-3.1.1-py3-none-any.whl  MarkupSafe-2.1.1-cp310-cp310-emscripten_wasm32.whl  PIL-9.1.0-cp310-cp310-emscripten_wasm32.whl  attrs-21.4.0-py2.py3-none-any.whl  distutils.tar  fpcast_test-0.1.1-cp310-cp310-emscripten_wasm32.whl  micropip-0.1-py3-none-any.whl  numpy-1.22.3-cp310-cp310-emscripten_wasm32.whl  package-lock.json  packaging-21.3-py3-none-any.whl  pkgconfig-1.5.5-py3-none-any.whl  pyparsing-3.0.7-py3-none-any.whl  python_dateutil-2.8.2-py2.py3-none-any.whl  pytz-2022.1-py2.py3-none-any.whl  regex-2022.3.15-cp310-cp310-emscripten_wasm32.whl  regex-tests.tar  sharedlib_test_py-1.0-cp310-cp310-emscripten_wasm32.whl  six-1.16.0-py2.py3-none-any.whl
app/templates/: hello.html  index.html
