[tool.poetry]
name = "pose-viewer-pilot"
version = "0.1.0"
description = ""
authors = ["Talmo Pereira <talmo@salk.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
pyuwsgi = "^2.0.20"

[tool.poetry.dev-dependencies]
black = "a"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
